changing begins now 🚀

--- a/WebsitePro-master/index.html
+++ b/WebsitePro-master/index.html
@@ -8,10 +8,10 @@
   <title>Luxury Travel</title>
   <!-- SCSS link-->
   <link rel="stylesheet" href="styles/style.css">
-
   <!-- Font Awesome-->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
   <!-- JS file link -->
 
   <script src="/scripts/script.js" defer></script>
@@ -32,23 +32,21 @@
     <!-- Menu icon -->
     <div id="menu-btn" class="fa-solid fa-bars"></div>
     <!-- Logo -->
-    <a href="#home" class="logo"><i class="fas fa-paper-plane"></i>
-      LUXURY TRAVEL</a>
+    <a href="#home" class="logo"><i class="fa-brands fa-apple"></i></a>
     <!-- Navigation menu -->
     <nav class="navbar">
       <ul class="nav-items">
         <li class="nav-item"><a href="#home">Home</a></li>
-        <li class="nav-item"><a href="about.html">About</a></li>
-        <li class="nav-item"><a href="luxury.html">Luxury</a></li>
-        <li class="nav-item"><a href="gallery.html">Gallery</a></li>
-        <li class="nav-item"><a href="reference.html">Reference</a></li>
-        <li class="nav-item"><a href="contact.html">Contact</a></li>
+        <li class="nav-item"><a href="about.html">Mac</a></li>
+        <li class="nav-item"><a href="luxury.html">iPad</a></li>
+        <li class="nav-item"><a href="gallery.html">iPhone</a></li>
+        <li class="nav-item"><a href="reference.html">Watch</a></li>
+        <li class="nav-item"><a href="contact.html">Support</a></li>
       </ul>
     </nav>
     <!-- Bookings button -->
-    <ul class="nav-item-booking">
-      <li><a href="contact.html#book-form" class="btn-book">Book now</a></li>
-    </ul>
+    <!-- <a href="#" class="logo"><i class="fa-solid fa-magnifying-glass"></i></a> -->
+    <a href="#" class="logo"><i class="fa-solid fa-bag-shopping"></i></a>
   </header>
 
 
