Home page changing

--- a/WebsitePro-master/index.html
+++ b/WebsitePro-master/index.html
@@ -67,16 +67,16 @@
   <!-- Video -->
   <main>
     <section class="about">
-      <div class="video-container">
+      <!-- <div class="video-container">
         <video src="images/v1.mp4" muted autoplay loop class="video"></video>
         <div class="controls">
           <span class="control-btn" data-src="images/v1.mp4"></span>
           <span class="control-btn" data-src="images/v2.mp4"></span>
           <span class="control-btn" data-src="images/v3.mp4"></span>
         </div>
-      </div>
+      </div> -->
 
-      <div class="content content-border-right">
+      <!-- <div class="content content-border-right">
         <span>Why Choose Us?</span>
         <h1>Luxury Travel awaits you</h1>
         <p>The Luxury Travel specializes in indulgent vacations and executive business travel. We are trusted advisors
@@ -91,7 +91,7 @@
           simply indulging in a weekend away, we can help.
         </p>
         <a href="luxury.html" class="btn">Read more...</a>
-      </div>
+      </div> -->
     </section>
   </main>
   <div class="border_two"></div>
