--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Luxury Travel</title>
+  <title>Apple project</title>
   <!-- SCSS link-->
   <link rel="stylesheet" href="styles/style.css">
   <!-- Font Awesome-->
@@ -88,6 +88,34 @@
 
     </section>
   <div class="border_two"></div>
+
+  <!-- Gallery grid -->
+
+  <!-- Info and Image -->
+  <section class="gallery">
+    <div class="box-container">
+
+      <div class="box-gallery">
+        <img src="/apple_store/images/home_images/h4.png" alt="">
+      </div>
+      <div class="box-gallery">
+        <img src="/apple_store/images/home_images/h5.png" alt="">
+      </div>
+      <div class="box-gallery">
+        <img src="/apple_store/images/home_images/h6.png" alt="">
+      </div>
+      <div class="box-gallery">
+        <img src="/apple_store/images/home_images/h7.png" alt="">
+      </div>
+      <div class="box-gallery">
+        <img src="/apple_store/images/home_images/h8.png" alt="">
+      </div>
+      <div class="box-gallery">
+        <img src="/apple_store/images/home_images/h9.png" alt="">
+      </div>
+     
+    </div>
+  </section>
 
 
   <!-- Destinations -->
