--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apple project</title>
   <!-- SCSS link-->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="/apple_store/styles/style.css">
   <!-- Font Awesome-->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -87,30 +87,51 @@
       </div>
 
     </section>
-  <div class="border_two"></div>
 
   <!-- Gallery grid -->
-
-  <!-- Info and Image -->
   <section class="gallery">
     <div class="box-container">
 
       <div class="box-gallery">
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
         <img src="/apple_store/images/home_images/h4.png" alt="">
       </div>
       <div class="box-gallery">
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
         <img src="/apple_store/images/home_images/h5.png" alt="">
       </div>
       <div class="box-gallery">
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
         <img src="/apple_store/images/home_images/h6.png" alt="">
       </div>
       <div class="box-gallery">
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
         <img src="/apple_store/images/home_images/h7.png" alt="">
       </div>
       <div class="box-gallery">
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
         <img src="/apple_store/images/home_images/h8.png" alt="">
       </div>
       <div class="box-gallery">
+        <ul>
+          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+        </ul>
         <img src="/apple_store/images/home_images/h9.png" alt="">
       </div>
      
