--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -14,7 +14,7 @@
 
   <!-- JS file link -->
 
-  <script src="/scripts/script.js" defer></script>
+  <script src="/apple_store/scripts/script.js" defer></script>
 
   <!-- Links to partners carousel slider -->
   <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.carousel.min.css"
