--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -406,53 +406,123 @@
   <!-- Footer -->
   <div class="border"></div>
   <section class="footer">
-    <div class="box-container">
-      <div class="box">
-        <a href="#" class="logo"><i class="fas fa-paper-plane"></i> LUXURY TRAVEL</a>
-        <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you. <br>
-          So whether you`re off to the beach or the boardroom.
-        </p>
+    <div class="footer-content">
+      <div class="box-container">
+        <div class="box">
+          <h3>Handla och läs mer</h3>
+          <ul>
+            <li><a href="#" >Butik</a></li>
+            <li><a href="#" >Mac</a></li>
+            <li><a href="#" >iPad</a></li>
+            <li><a href="#">iPhone</a></li>
+            <li><a href="#">Watch</a></li>
+            <li><a href="#">AirPods</a></li>
+            <li><a href="#">TV och hem</a></li>
+            <li><a href="#">AirTag</a></li>
+            <li><a href="#">Tillbehör</a></li>
+            <li><a href="#">Presentkort</a></li>
+          </ul>
+        </div>
 
-        <div class="share">
-          <a href="https://www.facebook.com/" class="fab fa-facebook-f" target="blank"></a>
-          <a href="https://twitter.com/?lang=sv" class="fab fa-twitter" target="blank"></a>
-          <a href="https://www.instagram.com/" class="fab fa-instagram" target="blank"></a>
-          <a href="https://www.linkedin.com/" class="fab fa-linkedin" target="blank"></a>
+        <div class="box">
+          <h3>Services</h3>
+          <ul>
+            <li><a href="#" >Apple Music</a></li>
+            <li><a href="#" >Apple TV+</a></li>
+            <li><a href="#" >Apple Arcade</a></li>
+            <li><a href="#">iCloud</a></li>
+            <li><a href="#">Apple One</a></li>
+            <li><a href="#">Apple Pay</a></li>
+            <li><a href="#">App Store</a></li>
+          </ul>
+
+          <h3>Konto</h3>
+          <ul>
+            <li><a href="#" >Hantera Apple-ID</a></li>
+            <li><a href="#" >Apple Store-konto</a></li>
+            <li><a href="#" >iCloud.com</a></li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>Apple Store</h3>
+          <ul>
+            <li><a href="#" >Hitta en butik</a></li>
+            <li><a href="#">Genius Bar</a></li>
+            <li><a href="#">Today at Apple</a></li>
+            <li><a href="#">Apples Sommarläger</a></li>
+            <li><a href="#">Apple Store-appen</a></li>
+            <li><a href="#">Apple Trade In</a></li>
+            <li><a href="#">Beställningsstatus</a></li>
+            <li><a href="#">Hjälp med att handla</a></li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>För företag</h3>
+          <ul>
+            <li><a href="#" >Apple och företag</a></li>
+            <li><a href="#" >Handla till företaget</a></li>
+          </ul>
+
+          <h3>För utbildning</h3>
+          <ul>
+            <li><a href="#" >Apple i utbildningen</a></li>
+            <li><a href="#" >Handla till studierna</a></li>
+          </ul>
+
+          <h3>För sjukvården</h3>
+          <ul>
+            <li><a href="#" >Apple i sjukvården</a></li>
+            <li><a href="#" >Apple Watch och hälsa</a></li>
+          </ul>
+        </div>
+
+        <div class="box">
+          <h3>Apples värderingar</h3>
+          <ul>
+            <li><a href="#" >Mijön</a></li>
+            <li><a href="#" >Personlig integritet</a></li>
+            <li><a href="#" >Leverantörsansvar</a></li>
+          </ul>
+
+          <h3>Om Apple</h3>
+          <ul>
+            <li><a href="#" >Newsroom</a></li>
+            <li><a href="#" >Apples ledning</a></li>
+            <li><a href="#">Karriärmöjligheter</a></li>
+            <li><a href="#">Garanti</a></li>
+            <li><a href="#">Investerare</a></li>
+            <li><a href="#">Etik och efterlevnad av lagar</a></li>
+            <li><a href="#">Event</a></li>
+            <li><a href="#">Nya arbetstillfällen i Europa</a></li>
+            <li><a href="#">Kontakta Apple</a></li>
+          </ul>
+        </div>
+
+      </div>
+      <p class="footer-shop">Fler Sätt att handla: <a href="">Hitta en Apple Store</a> eller <a href="">annan återförsäljare</a> i närheten. Eller ring 020-120 99 71</p>
+      <div class="divider"></div>
+      <div class="legal">
+        <div class="copyrights">
+          <p>Copyright &copy; 
+            <script>document.write(new Date().getFullYear())</script>
+            Apple inc. Alla rättilheter förbehålls.
+          </p>
+        </div>
+        <div>
+          <ul>
+            <li><a href="#">Integritetspolicy</a></li>
+            <li><a href="#">Användning av cookies</a></li>
+            <li><a href="#">Användningsvillkor</a></li>
+            <li><a href="#">Försäljning och återbetalning</a></li>
+            <li><a href="#">Juridisk information</a></li>
+            <li><a href="#">Sajtkarta</a></li>
+          </ul>
         </div>
       </div>
-      <div class="box">
-        <h3>Quick Menu</h3>
-        <a href="#home" class="links"><i class="fas fa-arrow-right"></i> Home</a>
-        <a href="about.html" class="links"><i class="fas fa-arrow-right"></i> About</a>
-        <a href="luxury.html" class="links"><i class="fas fa-arrow-right"></i> Luxury</a>
-        <a href="gallery.html" class="links"><i class="fas fa-arrow-right"></i> Gallery</a>
-        <a href="reference.html" class="links"><i class="fas fa-arrow-right"></i> Reference</a>
-        <a href="contact.html" class="links"><i class="fas fa-arrow-right"></i> Contact</a>
-      </div>
-
-      <div class="box">
-        <h3>Contact Info</h3>
-        <p><i class="fas fa-map"></i>Stockholm</p>
-        <p><i class="fas fa-phone"></i>+0123 456 789</p>
-        <p><i class="fas fa-envelope"></i>info@luxurytravel.com</p>
-      </div>
-
-      <div class="box">
-        <h3>Newsletter</h3>
-        <p>Subscribe for lates luxury updates</p>
-        <form action="subscribe.html">
-          <input type="email" class="email" name="email" id="email" placeholder=" Enter your email" required>
-          <input type="submit" value="Subscribe" class="btn-subscribe">
-        </form>
-      </div>
-
     </div>
   </section>
-  <div class="copyrights">
-    <p>Copyright &copy; All Right Reserved
-      <script>document.write(new Date().getFullYear())</script>
-    </p>
-  </div>
 
 </body>
 
