--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Apple project</title>
   <!-- SCSS link-->
-  <link rel="stylesheet" href="/apple_store/styles/style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <!-- Font Awesome-->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
   <!-- JS file link -->
 
-  <script src="/apple_store/scripts/script.js" defer></script>
+  <script src="scripts/script.js" defer></script>
 
   <!-- Links to partners carousel slider -->
   <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.carousel.min.css"
