Added movie slider

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -14,7 +14,7 @@
 
   <!-- JS file link -->
 
-  <script src="/scripts/script.js" defer></script>
+  <script src="scripts/script.js" defer></script>
 
   <!-- Links to partners carousel slider -->
   <link href="https://owlcarousel2.github.io/OwlCarousel2/assets/owlcarousel/assets/owl.carousel.min.css"
@@ -117,6 +117,153 @@
     </div>
   </section>
 
+  <!-- Shows slider -->
+<div class="slideshow-container">
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/movie/emancipation/umc.cmc.1j6fdxookwtqml3bd8ivvcbbv?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h10.png" style="width:100%" alt="emancipation"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/slow-horses/umc.cmc.2szz3fdt71tl1ulnbp8utgq5o?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h11.png" style="width:100%" alt="slow horses"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/movie/spirited/umc.cmc.3lp7wqowerzdbej98tveildi3?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h12.png" style="width:100%" alt="spirited"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/shantaram/umc.cmc.atxsrive40xli3zh3uxjimut?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h13.png" style="width:100%" alt="shantaram"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/movie/selena-gomez-my-mind--me/umc.cmc.39yw4dp13gshxq5bt9fsl0o5y?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h14.png" style="width:100%" alt="Selena gomez my mind and me"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/echo-3/umc.cmc.mzqa5sj4m2i80g51cgu04i3j?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h15.png" style="width:100%" alt="echo 3"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/the-mosquito-coast/umc.cmc.5nghmxp88xe0qxhtlhfiu5r2h?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h16.png" style="width:100%" alt="the mosquito coast"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/ted-lasso/umc.cmc.vtoh0mn0xn7t3c643xqonfzy?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h17.png" style="width:100%" alt="ted lasso"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/see/umc.cmc.3s4mgg2y7h95fks9gnc4pw13m?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h18.png" style="width:100%" alt="see"></a>
+  </div>
+
+  <div class="mySlides fade">
+    <a href="https://tv.apple.com/se/show/severance/umc.cmc.1srk2goyh2q2zdxcx605w8vtx?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
+      target="_blank"><img src="images/home_images/h19.png" style="width:100%" alt="severance"></a>
+  </div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+
+  <!-- <div class="owl">
+    <div class="owl-carousel owl-theme owl-loaded owl-drag">
+
+      <div class="owl-stage-outer">
+
+        <div class="owl-stage">
+
+          <div class="owl-item cloned">
+            <div class="item">
+              <a href="https://tv.apple.com/se/movie/emancipation/umc.cmc.1j6fdxookwtqml3bd8ivvcbbv?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h10.png"
+                  alt="emancipation"></a>
+            </div>
+          </div>
+
+          <div class="owl-item cloned">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/slow-horses/umc.cmc.2szz3fdt71tl1ulnbp8utgq5o?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h11.png"
+                  alt="slow horses"></a>
+            </div>
+          </div>
+
+          <div class="owl-item cloned">
+            <div class="item">
+              <a href="https://tv.apple.com/se/movie/spirited/umc.cmc.3lp7wqowerzdbej98tveildi3?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h12.png" alt="spirited"></a>
+            </div>
+          </div>
+
+          <div class="owl-item cloned">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/shantaram/umc.cmc.atxsrive40xli3zh3uxjimut?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h13.png"
+                  alt="shantaram"></a>
+            </div>
+          </div>
+
+          <div class="owl-item cloned">
+            <div class="item">
+              <a href="https://tv.apple.com/se/movie/selena-gomez-my-mind--me/umc.cmc.39yw4dp13gshxq5bt9fsl0o5y?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h14.png"
+                  alt="Selena gomez my mind and me"></a>
+            </div>
+          </div>
+
+          <div class="owl-item cloned">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/echo-3/umc.cmc.mzqa5sj4m2i80g51cgu04i3j?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h15.png"
+                  alt="echo 3"></a>
+            </div>
+          </div>
+
+          <div class="owl-item">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/the-mosquito-coast/umc.cmc.5nghmxp88xe0qxhtlhfiu5r2h?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h16.png"
+                  alt="the mosquito coast"></a>
+            </div>
+          </div>
+
+          <div class="owl-item">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/ted-lasso/umc.cmc.vtoh0mn0xn7t3c643xqonfzy?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h17.png"
+                  alt="ted lasso"></a>
+            </div>
+          </div>
+
+          <div class="owl-item">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/see/umc.cmc.3s4mgg2y7h95fks9gnc4pw13m?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img
+                  src="images/home_images/h18.png" alt="see"></a>
+            </div>
+          </div>
+
+          <div class="owl-item">
+            <div class="item">
+              <a href="https://tv.apple.com/se/show/severance/umc.cmc.1srk2goyh2q2zdxcx605w8vtx?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h19.png" alt="severance"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
 
   <!-- Destinations -->
 
@@ -259,148 +406,6 @@
     </div>
   </section>
 
-  <!-- Partners slider -->
-  <section class="partners">
-    <div class="heading">
-      <span>Our luxury accommodations</span>
-      <h2>Check our popular partners</h2>
-    </div>
-  </section>
-
-  <div class="owl">
-    <div class="owl-carousel owl-theme owl-loaded owl-drag">
-
-      <div class="owl-stage-outer">
-
-        <div class="owl-stage">
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://www.oneandonlyresorts.com/" target="_blank"><img src="images/carousel1.jpeg"
-                  alt="one and only resort"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://www.virtuoso.com/travel" target="_blank"><img src="images/carousel2.jpeg"
-                  alt="virtuoso resort"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://www.aman.com/" target="_blank"><img src="images/carousel3.jpeg" alt="amam resorts"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://www.fourseasons.com/" target="_blank"><img src="images/carousel11.png"
-                  alt="fourseasons"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://www.ritzcarlton.com/en/reserve" target="_blank"><img src="images/carousel5.jpeg"
-                  alt="rits carlton reserve"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://www.hilton.com/en/conrad/" target="_blank"><img src="images/carousel6.jpeg"
-                  alt="conrad resort"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://www.hilton.com/en/waldorf-astoria/" target="_blank"><img src="images/carousel7.jpeg"
-                  alt="waldorf astoria hotels and resorts"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://st-regis.marriott.com/" target="_blank"><img src="images/carousel8.jpeg"
-                  alt="st regis"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://luxurylifestyle.ihg.com/s/login/?ec=302&startURL=%2Fs%2F" target="_blank"><img
-                  src="images/carousel9.jpeg" alt="ihg hotels and resorts"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://www.belmond.com/" target="_blank"><img src="images/carousel10.jpeg" alt="belmond"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://www.fourseasons.com/" target="_blank"><img src="images/carousel11.png"
-                  alt="four seasons hotel"></a>
-            </div>
-          </div>
-
-          <div class="owl-item active">
-            <div class="item">
-              <a href="https://www.dcdiamondclub.com/login" target="_blank"><img src="images/carousel12.jpeg"
-                  alt="diamond"></a>
-            </div>
-          </div>
-
-          <div class="owl-item active">
-            <div class="item">
-              <a href="https://www.mandarinoriental.com/en/" target="_blank"><img src="images/carousel13.jpeg"
-                  alt="mandarin orientals"></a>
-            </div>
-          </div>
-
-          <div class="owl-item active">
-            <div class="item">
-              <a href="https://www.peninsula.com/en/default" target="_blank"><img src="images/carousel14.jpeg"
-                  alt="the peninsula hotels"></a>
-            </div>
-          </div>
-
-          <div class="owl-item active">
-            <div class="item">
-              <a href="https://www.ritzcarlton.com/en/reserve" target="_blank"><img src="images/carousel5.jpeg"
-                  alt="rits carlton reserve"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://www.bulgarihotels.com/" target="_blank"><img src="images/carousel16.jpeg"
-                  alt="bvlgari"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://luxurylifestyle.ihg.com/s/login/?ec=302&startURL=%2Fs%2F" target="_blank"><img
-                  src="images/carousel9.jpeg" alt="ihg hotels and resorts"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://www.dcdiamondclub.com/login" target="_blank"><img src="images/carousel12.jpeg"
-                  alt="diamond"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
   <!-- Footer -->
