Small edits to footer and slider

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -410,7 +410,7 @@
 
   <!-- Footer -->
   <div class="border"></div>
-  <section class="footer">
+  <footer>
     <div class="footer-content">
       <div class="box-container">
         <div class="box">
@@ -527,7 +527,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </footer>
 
 </body>
 
