Minor visual changes

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -288,7 +288,7 @@
 
   <!-- Destinations -->
 
-  <section class="destination" id="destination">
+  <!-- <section class="destination" id="destination">
     <div class="heading">
       <span>Our packages includes</span>
       <h2>Luxury for You</h2>
@@ -385,31 +385,10 @@
       </div>
     </div>
 
-  </section>
-
-  <!-- info / image -->
-
-  <section class="about">
-    <div class="img-container">
-      <img class="image" src="images/b5.jpeg" alt="Luxury Travel adventures">
-    </div>
-
-    <div class="content content-border-right">
-      <span>Business Travel Luxury</span>
-      <h2>Where Business Meets Pleasure</h2>
-      <p>Despite COVID, many of our clients need to get back to business and that means returning to travel safely and
-        efficiently. We`ll get you where you need to be and provide the indulgent extras you need to relax after long
-        days of
-        work.
-      </p>
-      <a href="about.html" class="btn">About Oss</a>
-    </div>
-  </section>
-
-
+  </section> -->
 
   <!-- Footer -->
-  <div class="border"></div>
+
   <footer>
     <div class="footer-content">
       <div class="box-container">
