Starting work on mac page

--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -31,11 +31,11 @@
     <!-- Menu icon -->
     <div id="menu-btn" class="fa-solid fa-bars"></div>
     <!-- Logo -->
-    <a href="#home" class="logo"><i class="fa-brands fa-apple"></i></a>
+    <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
     <!-- Navigation menu -->
     <nav class="navbar">
       <ul class="nav-items">
-        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
         <li class="nav-item"><a href="ipad.html">iPad</a></li>
         <li class="nav-item"><a href="iphone.html">iPhone</a></li>
