--- a/Apple_store/mac.html
+++ b/Apple_store/mac.html
@@ -31,11 +31,11 @@
     <!-- Menu icon -->
     <div id="menu-btn" class="fa-solid fa-bars"></div>
     <!-- Logo -->
-    <a href="#home" class="logo"><i class="fa-brands fa-apple"></i></a>
+    <a href="index.html" class="logo"><i class="fa-brands fa-apple"></i></a>
     <!-- Navigation menu -->
     <nav class="navbar">
       <ul class="nav-items">
-        <li class="nav-item"><a href="#home">Home</a></li>
+        <li class="nav-item"><a href="index.html">Home</a></li>
         <li class="nav-item"><a href="mac.html">Mac</a></li>
         <li class="nav-item"><a href="ipad.html">iPad</a></li>
         <li class="nav-item"><a href="iphone.html">iPhone</a></li>
@@ -51,7 +51,7 @@
 
   <!-- Home section -->
 
-  <section class="home" id="home">
+  <section class="home_mac" id="home_mac">
     <div class="content">
 
       <ul>
@@ -63,8 +63,8 @@
   </section>
 
 
-  <!-- Ipad section -->
-  <section class="about ipad">
+  <!-- MacBookPro section -->
+  <section class="about macBook_pro">
     <div class="content">
 
       <ul>
@@ -74,6 +74,60 @@
     </div>
 
   </section>
+
+  <!-- Products MacBookPro -->
+
+  <section class="destination" id="destination">
+      <div class="heading">
+        <h2>Vilken Mac passar dig bäst?</h2>
+      </div>
+  
+      <div class="box-container">
+  
+        <div class="box">
+          <div class="image">
+            <img src="/Apple_store/images/mac_images/mp1.png" alt="">
+          </div>
+          <div class="content">
+            <h3>Luxury yachts</h3>
+            <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
+            <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
+          </div>
+        </div>
+  
+        <div class="box">
+          <div class="image">
+            <img src="/Apple_store/images/mac_images/mp2.png" alt="">
+          </div>
+          <div class="content">
+            <h3>Luxury limousine</h3>
+            <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
+            <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
+          </div>
+        </div>
+  
+        <div class="box">
+          <div class="image">
+            <img src="/Apple_store/images/mac_images/mp3.png" alt="">
+          </div>
+          <div class="content">
+            <h3>Luxury stays</h3>
+            <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
+            <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
+          </div>
+        </div>
+  
+        <div class="box">
+          <div class="image">
+            <img src="/Apple_store/images/mac_images/mp4.png" alt="">
+          </div>
+          <div class="content">
+            <h3>Luxury wedding</h3>
+            <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
+            <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
+          </div>
+        </div>
+    </section>
 
   <!-- Presentcard -->
 
