--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -48,345 +48,101 @@
     <a href="#" class="logo"><i class="fa-solid fa-bag-shopping"></i></a>
   </header>
 
-
-  <!-- Home section -->
-
-  <section class="home" id="home">
-    <div class="content">
-
-      <ul>
-        <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-        <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
-
-  </section>
-
-
-  <!-- Ipad section -->
-  <section class="about ipad">
-    <div class="content">
-
-      <ul>
-        <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-        <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
-
-  </section>
-
-  <!-- Presentcard -->
-
-  <section class="about presentcard">
-    <div class="content">
-
-      <ul>
-        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
-
-  </section>
-
-  <!-- Gallery grid -->
-  <section class="gallery">
-    <div class="box-container">
-
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h4.png" alt="">
-      </div>
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h5.png" alt="">
-      </div>
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h6.png" alt="">
-      </div>
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h7.png" alt="">
-      </div>
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h8.png" alt="">
-      </div>
-      <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h9.png" alt="">
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Shows slider -->
-  <div class="slideshow-container">
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/movie/emancipation/umc.cmc.1j6fdxookwtqml3bd8ivvcbbv?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h10.png" style="width:100%" alt="emancipation"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/slow-horses/umc.cmc.2szz3fdt71tl1ulnbp8utgq5o?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h11.png" style="width:100%" alt="slow horses"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/movie/spirited/umc.cmc.3lp7wqowerzdbej98tveildi3?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h12.png" style="width:100%" alt="spirited"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/shantaram/umc.cmc.atxsrive40xli3zh3uxjimut?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h13.png" style="width:100%" alt="shantaram"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/movie/selena-gomez-my-mind--me/umc.cmc.39yw4dp13gshxq5bt9fsl0o5y?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h14.png" style="width:100%" alt="Selena gomez my mind and me"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/echo-3/umc.cmc.mzqa5sj4m2i80g51cgu04i3j?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h15.png" style="width:100%" alt="echo 3"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/the-mosquito-coast/umc.cmc.5nghmxp88xe0qxhtlhfiu5r2h?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h16.png" style="width:100%" alt="the mosquito coast"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/ted-lasso/umc.cmc.vtoh0mn0xn7t3c643xqonfzy?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h17.png" style="width:100%" alt="ted lasso"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/see/umc.cmc.3s4mgg2y7h95fks9gnc4pw13m?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h18.png" style="width:100%" alt="see"></a>
-    </div>
-
-    <div class="mySlides fade">
-      <a href="https://tv.apple.com/se/show/severance/umc.cmc.1srk2goyh2q2zdxcx605w8vtx?itscg=10000&itsct=atv-apl_hp-stream_now--220622"
-        target="_blank"><img src="images/home_images/h19.png" style="width:100%" alt="severance"></a>
-    </div>
-
+  <!-- Ribbon -->
+  <div class="ribbon-wrapper" style="margin-top: 63px; text-align: center; width: 100%; padding: 16px 1px; background-color: #dfdfdf;">
+    <p style="font-size: 14px;">Gratis leverans senast 24/12 av varor i lager som beställs senast 21/12. Se leveransdatum och alternativ i kassan.</p>
   </div>
-  <br>
+  
+  <section class="big-card" style="padding-top: 50px;">
+    <p style="font-size: 17px; margin: 10px;">Nyhet</p>
+    <p style="font-size: 20px; font-weight: bold;">iPhone 14</p>
+    <p class="fancy" style="margin: 0 auto; width: fit-content; font-size: 48px; font-weight: bolder; background: -webkit-linear-gradient(45deg,#2ca2b4,#5598de 24%,#7f87ff 45%,#f65aad 76%,#ec3d43); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Stor och större.</p>
+    <p style="font-size: 21px; padding-top: 20px;">Från 11 995 kr</p>
+    <ul class="a-list" style="padding: 20px;">
+      <button style="font-size: 17px; padding: 8px 16px; border-radius: 2.5rem; background-color: #0071E3; color: white;">Köp</button>
+      <a href="#" style="margin-left: 20px; font-size: 21px; font-weight: 500; color:#0071E3;">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
+    </ul>
+    <img src="images/iphone_images/Capture1.PNG" alt="">
+  </section>
 
-  <div style="text-align:center">
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+  <section class="big-card" style="padding-top: 50px; background-color: black;">
+    <p style="font-size: 17px; margin: 10px; color: white;">Nyhet</p>
+    <p style="font-size: 20px; font-weight: bold; color: white;">iPhone 14 Pro</p>
+    <p class="fancy" style="margin: 0 auto; width: fit-content; font-size: 48px; font-weight: bolder; background: -webkit-linear-gradient(#fdb6ff,#9c1cf1); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Bortom Pro.</p>
+    <p style="font-size: 21px; color: white; padding-top: 20px;">Från 14 995 kr</p>
+    <ul class="a-list" style="padding: 20px;">
+      <button style="font-size: 17px; padding: 8px 16px; border-radius: 2.5rem; background-color: #0071E3; color: white;">Köp</button>
+      <a href="#" style="margin-left: 20px; font-size: 21px; font-weight: 500; color:#0071E3;">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
+    </ul>
+    <img src="images/iphone_images/Capture2.PNG" alt="">
+  </section>
+
+  <section class="big-card" style="background-color: #FBFBFD; padding-top: 50px; display: flex; justify-content: center; align-items: center; gap: 50px;">
+    <div style="padding-right: 5vw;">
+    <p style="font-size: 20px; font-weight: bold;">iPhone SE</p>
+    <p class="fancy" style="margin: 0 auto; width: fit-content; font-size: 48px; font-weight: bolder; background: -webkit-linear-gradient(90deg,#1e3791 0%,#2948b1 40%,#3153c6 55%,#214fe7 60%); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">Känn kraften. <br>Se priset.</p>
+    <p style="font-size: 21px; padding-top: 20px;">Från 6 495 kr</p>
+    <ul class="a-list" style="padding: 20px;">
+      <button style="font-size: 17px; padding: 8px 16px; border-radius: 2.5rem; background-color: #0071E3; color: white;">Köp</button>
+      <a href="#" style="margin-left: 20px; font-size: 21px; font-weight: 500; color:#0071E3;">Läs mer <i class="fa-solid fa-angle-right" style="font-size: 16px;"></i></a>
+    </ul>
   </div>
+    <img src="images/iphone_images/Capture3.PNG" alt="">
+  </section>
 
-  <!-- <div class="owl">
-    <div class="owl-carousel owl-theme owl-loaded owl-drag">
-
-      <div class="owl-stage-outer">
-
-        <div class="owl-stage">
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/movie/emancipation/umc.cmc.1j6fdxookwtqml3bd8ivvcbbv?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h10.png"
-                  alt="emancipation"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/slow-horses/umc.cmc.2szz3fdt71tl1ulnbp8utgq5o?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h11.png"
-                  alt="slow horses"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/movie/spirited/umc.cmc.3lp7wqowerzdbej98tveildi3?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h12.png" alt="spirited"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/shantaram/umc.cmc.atxsrive40xli3zh3uxjimut?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h13.png"
-                  alt="shantaram"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/movie/selena-gomez-my-mind--me/umc.cmc.39yw4dp13gshxq5bt9fsl0o5y?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h14.png"
-                  alt="Selena gomez my mind and me"></a>
-            </div>
-          </div>
-
-          <div class="owl-item cloned">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/echo-3/umc.cmc.mzqa5sj4m2i80g51cgu04i3j?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h15.png"
-                  alt="echo 3"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/the-mosquito-coast/umc.cmc.5nghmxp88xe0qxhtlhfiu5r2h?ign-itscg=10000&ign-itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h16.png"
-                  alt="the mosquito coast"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/ted-lasso/umc.cmc.vtoh0mn0xn7t3c643xqonfzy?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h17.png"
-                  alt="ted lasso"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/see/umc.cmc.3s4mgg2y7h95fks9gnc4pw13m?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img
-                  src="images/home_images/h18.png" alt="see"></a>
-            </div>
-          </div>
-
-          <div class="owl-item">
-            <div class="item">
-              <a href="https://tv.apple.com/se/show/severance/umc.cmc.1srk2goyh2q2zdxcx605w8vtx?itscg=10000&itsct=atv-apl_hp-stream_now--220622" target="_blank"><img src="images/home_images/h19.png" alt="severance"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- Destinations -->
-
-  <!-- <section class="destination" id="destination">
-    <div class="heading">
-      <span>Our packages includes</span>
-      <h2>Luxury for You</h2>
-    </div>
-
-    <div class="box-container">
-
-      <div class="box">
-        <div class="image">
-          <img src="images/b4.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury yachts</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p16.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury limousine</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p18.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury stays</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p12.webp" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury wedding</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p14.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury places</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p24.jpg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury views</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p21.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury hotels</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="images/p10.jpeg" alt="">
-        </div>
-        <div class="content">
-          <h3>Luxury dinings</h3>
-          <p>Our luxury travel advisors deliver exceptionally indulgent experiences wherever life takes you.</p>
-          <a href="luxury.html#packages">Check our offers <i class="fas fa-angle-right"></i></a>
-        </div>
-      </div>
-    </div>
-
-  </section> -->
-
-
+  <section>
+    <h2 style="font-size: 48px;">Vilken iPhone passar dig?</h2>
+    <table class="product-container">
+      <tr>
+        <div><!-- bild / beskrivning --></div>
+        <div><!-- bild / beskrivning --></div>
+        <div><!-- bild / beskrivning --></div>
+        <div><!-- bild / beskrivning --></div>
+      </tr>
+      <tr>
+        <div><!-- skärm specs --></div>
+        <div><!-- skärm specs --></div>
+        <div><!-- skärm specs --></div>
+        <div><!-- skärm specs --></div>
+      </tr>
+      <tr>
+        <div><!-- dynamic island --></div>
+        <div><!-- - --></div>
+        <div><!-- - --></div>
+        <div><!-- - --></div>
+      </tr>
+      <tr>
+        <div><!-- Kamera specs --></div>
+        <div><!-- Kamera specs --></div>
+        <div><!-- Kamera specs --></div>
+        <div><!-- Kamera specs --></div>
+      </tr>
+      <tr>
+        <div><!-- batteri specs --></div>
+        <div><!-- batteri specs --></div>
+        <div><!-- batteri specs --></div>
+        <div><!-- batteri specs --></div>
+      </tr>
+      <tr>
+        <div><!-- bionic chip? --></div>
+        <div><!-- bionic chip? --></div>
+        <div><!-- bionic chip? --></div>
+        <div><!-- bionic chip? --></div>
+      </tr>
+      <tr>
+        <div><!-- Face ID --></div>
+        <div><!-- Face ID --></div>
+        <div><!-- Face ID --></div>
+        <div><!-- Touch ID --></div>
+      </tr>
+      <tr>
+        <div><!-- Supersnabb 5G-uppkoppling --></div>
+        <div><!-- Supersnabb 5G-uppkoppling --></div>
+        <div><!-- Supersnabb 5G-uppkoppling --></div>
+        <div><!-- 5G-uppkoppling --></div>
+      </tr>
+    </table>
+  </section>
 
   <!-- Footer -->
   <footer>
