--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -53,6 +53,8 @@
 
   <section class="home" id="home">
     <div class="content">
+      <h1 class="big_text_xl">iPhone 14</h1>
+      <p>Stor och större.</p>
 
       <ul>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
