--- a/Apple_store/index.html
+++ b/Apple_store/index.html
@@ -61,14 +61,29 @@
         <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
       </ul>
     </div>
+    </div>
 
+  </section>
+
+  <!-- Presentcard section -->
+
+  <section class="presentcard">
+    <div class="content">
+      <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
+      <p class="text_light">Sista minuten-knappar som varar länge.</p>
+
+      <ul>
+        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
+      </ul>
+    </div>
   </section>
 
 
   <!-- Ipad section -->
-  <section class="about ipad">
-    <div class="content">
-
+  <section class="about_ipad">
+    <div class="content_right">
+      <h2 class="big_text_x">iPad</h2>
+      <p class="text_dark">Lekfull. Ritsugen. Magisk.</p>
       <ul>
         <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
         <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
@@ -76,35 +91,30 @@
     </div>
   </section>
 
-  <!-- Presentcard -->
-
-  <section class="about presentcard">
-    <div class="content">
-
-      <ul>
-        <li class="link"><a href="#">Visa julklapptipsen <i class="fa-solid fa-chevron-right"></i></a></li>
-      </ul>
-    </div>
-
-  </section>
-
   <!-- Gallery grid -->
   <section class="gallery">
     <div class="box-container">
-
       <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h4.png" alt="">
+        <div>
+          <ul>
+            <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
+            <p class="text_light">Sista minuten-knappar som varar länge.</p>
+            <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+            <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+          </ul>
+          <img src="/apple_store/images/home_images/h4.png" alt="">
+        </div>
       </div>
       <div class="box-gallery">
-        <ul>
-          <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
-          <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
-        </ul>
-        <img src="/apple_store/images/home_images/h5.png" alt="">
+        <div>
+          <ul>
+            <h2 class="big_text_xl_light">Sista chansen för wow.</h2>
+            <p class="text_light">Sista minuten-knappar som varar länge.</p>
+            <li class="link"><a href="#">Läs mer <i class="fa-solid fa-chevron-right"></i></a></li>
+            <li class="link"><a href="#">Köp <i class="fa-solid fa-chevron-right"></i></a></li>
+          </ul>
+          <img src="/apple_store/images/home_images/h5.png" alt="">
+        </div>
       </div>
     </div>
 
