--- a/Apple_store/iphone.html
+++ b/Apple_store/iphone.html
@@ -8,6 +8,7 @@
   <title>Apple project</title>
   <!-- SCSS link-->
   <link rel="stylesheet" href="styles/style.css">
+  
   <!-- Font Awesome-->
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
@@ -91,56 +92,103 @@
   </section>
 
   <section>
-    <h2 style="font-size: 48px;">Vilken iPhone passar dig?</h2>
+    <h2 class="table-headline">Vilken iPhone passar dig?</h2>
     <table class="product-container">
-      <tr>
-        <div><!-- bild / beskrivning --></div>
-        <div><!-- bild / beskrivning --></div>
-        <div><!-- bild / beskrivning --></div>
-        <div><!-- bild / beskrivning --></div>
-      </tr>
-      <tr>
-        <div><!-- skärm specs --></div>
-        <div><!-- skärm specs --></div>
-        <div><!-- skärm specs --></div>
-        <div><!-- skärm specs --></div>
-      </tr>
-      <tr>
-        <div><!-- dynamic island --></div>
-        <div><!-- - --></div>
-        <div><!-- - --></div>
-        <div><!-- - --></div>
-      </tr>
-      <tr>
-        <div><!-- Kamera specs --></div>
-        <div><!-- Kamera specs --></div>
-        <div><!-- Kamera specs --></div>
-        <div><!-- Kamera specs --></div>
-      </tr>
-      <tr>
-        <div><!-- batteri specs --></div>
-        <div><!-- batteri specs --></div>
-        <div><!-- batteri specs --></div>
-        <div><!-- batteri specs --></div>
-      </tr>
-      <tr>
-        <div><!-- bionic chip? --></div>
-        <div><!-- bionic chip? --></div>
-        <div><!-- bionic chip? --></div>
-        <div><!-- bionic chip? --></div>
-      </tr>
-      <tr>
-        <div><!-- Face ID --></div>
-        <div><!-- Face ID --></div>
-        <div><!-- Face ID --></div>
-        <div><!-- Touch ID --></div>
-      </tr>
-      <tr>
-        <div><!-- Supersnabb 5G-uppkoppling --></div>
-        <div><!-- Supersnabb 5G-uppkoppling --></div>
-        <div><!-- Supersnabb 5G-uppkoppling --></div>
-        <div><!-- 5G-uppkoppling --></div>
-      </tr>
+      <thead>
+        <tr>
+          <td>
+            <div class="iphone14pro">
+              <img src="images/iphone_images/iphone14pro.png" alt="">
+              <h4>Nyhet</h4>
+              <h2>iPhone 14 Pro</h2>
+              <p>Världens mest avancerade iPhone.</p>
+              <p class="price">Från 14 995 kr</p>
+              <button>Köp</button><br>
+              <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+          </td>
+          <td>
+            <div class="iphone14">
+              <img src="images/iphone_images/iphonepro.png" alt="">
+              <h4>Nyhet</h4>
+              <h2>iPhone 14</h2>
+              <p>Ett riktigt kraftverk.</p>
+              <p class="price">Från 11 995 kr</p>
+              <button>Köp</button><br>
+              <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+          </td>
+          <td>
+            <div class="iphone13">
+              <img src="images/iphone_images/iphone13.PNG" alt="">
+              <h4>Nyhet</h4>
+              <h2>iPhone 13</h2>
+              <p>Lika fantastisk som alltid.</p>
+              <p class="price">Från 8 995 kr</p>
+              <button>Köp</button><br>
+              <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+          </td>
+          <td>
+            <div class="iphonese">
+              <img src="images/iphone_images/iphonese.PNG" alt="">
+              <h4>Nyhet</h4>
+              <h2>iPhone SE</h2>
+              <p>Storslagen kraft. Svårsvaget pris.</p>
+              <p class="price">Från 6 495 kr</p>
+              <button>Köp</button><br>
+              <a href="">Läs mer <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+          </td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <div><!-- skärm specs --></div>
+          <div><!-- skärm specs --></div>
+          <div><!-- skärm specs --></div>
+          <div><!-- skärm specs --></div>
+        </tr>
+        <tr>
+          <div><!-- dynamic island --></div>
+          <div><!-- - --></div>
+          <div><!-- - --></div>
+          <div><!-- - --></div>
+        </tr>
+        <tr>
+          <div><!-- Kamera specs --></div>
+          <div><!-- Kamera specs --></div>
+          <div><!-- Kamera specs --></div>
+          <div><!-- Kamera specs --></div>
+        </tr>
+        <tr>
+          <div><!-- batteri specs --></div>
+          <div><!-- batteri specs --></div>
+          <div><!-- batteri specs --></div>
+          <div><!-- batteri specs --></div>
+        </tr>
+        <tr>
+          <div><!-- bionic chip? --></div>
+          <div><!-- bionic chip? --></div>
+          <div><!-- bionic chip? --></div>
+          <div><!-- bionic chip? --></div>
+        </tr>
+        <tr>
+          <div><!-- Face ID --></div>
+          <div><!-- Face ID --></div>
+          <div><!-- Face ID --></div>
+          <div><!-- Touch ID --></div>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <div><!-- Supersnabb 5G-uppkoppling --></div>
+          <div><!-- Supersnabb 5G-uppkoppling --></div>
+          <div><!-- Supersnabb 5G-uppkoppling --></div>
+          <div><!-- 5G-uppkoppling --></div>
+        </tr>
+      </tfoot>
+      
     </table>
   </section>
 
